# TTS-Project

./: .dockerignore  .gitignore  AICHAT_TAB_ANALYSIS.md  CRASH_FIX_SUMMARY.md  Cargo.toml  Dockerfile  LLM_STREAMING_ANALYSIS.md  PROJECT_REVIEW.md  PROJECT_TABS_ANALYSIS.md  QUICKSTART.md  README.md  STREAMING_TEST_GUIDE.md  TESTING_STATUS.md  VOICE_MODE_VISION.md  docker-compose.yml  test_streaming.js  test_streaming.py  test_streaming_simple.sh
frontend/: .dockerignore  Dockerfile  FRONTEND_GUIDE.md  FRONTEND_STRUCTURE.md  index.html  script.js  serve_frontend.py  start_frontend.sh  styles.css
frontend/css/: chat.css  global.css  server.css  stream.css  tts.css  voice-chat.css
frontend/js/: config.js  main.js
frontend/js/components/: audioPlayer.js  chat.js  spectrogram.js
frontend/js/services/: api.js  voice.js  websocket.js
frontend/js/tabs/: chat.js  server.js  stream.js  tts.js  voice-chat.js
frontend/js/utils/: audio.js  dom.js  format.js  tabs.js  toast.js  voices.js
frontend/tabs/: chat.html  server.html  stream.html  tts.html  voice-chat.html
llm_core/: Cargo.toml
llm_core/src/: lib.rs
models/: map.json
models/de_DE/mls/: metadata.json
models/de_DE/thorsten/: metadata.json
models/de_DE/thorsten_emotional/: metadata.json
models/en_US/amy/: metadata.json
models/en_US/lessac/: metadata.json
models/en_US/libritts/: metadata.json
models/en_US/ljspeech/: metadata.json
models/en_US/norman/: metadata.json
models/en_US/ryan/: metadata.json
models/es_ES/davefx/: metadata.json
models/es_ES/sharvard/: metadata.json
models/fr_FR/mls/: metadata.json
models/fr_FR/siwis/: metadata.json
models/fr_FR/tom/: metadata.json
models/it_IT/paola/: metadata.json
models/it_IT/riccardo/: metadata.json
models/nl_NL/mls/: metadata.json
models/nl_NL/pim/: metadata.json
models/nl_NL/ronnie/: config.json  metadata.json
models/uk_UA/lada/: metadata.json
models/uk_UA/ukrainian_tts/: metadata.json
scripts/: check_models.py  download_voices.py
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  metrics.rs  validation.rs
server/tests/: common.rs  e2e.rs  e2e_chat_pipeline.rs  e2e_test_helpers.rs  e2e_tts_pipeline.rs  e2e_websocket_streaming.rs  integration.rs
tests/: README.md  e2e.rs  e2e_chat_pipeline.rs  e2e_tts_pipeline.rs  run_tests.sh
tests/e2e/: chat_pipeline.rs  mod.rs  test_helpers.rs  tts_pipeline.rs  websocket_streaming.rs
tests/integration/: common.rs
tests/postman/: README.md  TTS_API.postman_collection.json
tts_core/: Cargo.toml
tts_core/src/: lib.rs  melspec.rs  stream.rs  wav.rs
