[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
tower_governor = { version = "0.8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mel_spec = "0.3"
ndarray = "0.16"
num-complex = "0.4"
futures-util = "0.3"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
sysinfo = "0.30"
tts_core = { path = "../tts_core" }
llm_core = { path = "../llm_core" }


