[package]
name = "tts_core"
version = "0.1.0"
edition = "2021"

[dependencies]
piper-rs = "0.1.9"
mel_spec = "0.3"
ndarray = "0.16"
num-complex = "0.4"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17"
base64 = "0.22"
hound = "3"


# Additional dependencies for streaming audio and mel frames
async-stream = "0.3"
futures-core = "0.3"
anyhow = "1.0"
