[package]
name = "tts_core"
version = "0.1.0"
edition = "2021"

[dependencies]
piper-rs = "0.1.9"
mel_spec = "0.3"
ndarray = "0.16"
num-complex = "0.4"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hound = "3"
dashmap = "5.5"
anyhow = "1.0"
lru = "0.12"
tokio = { version = "1", features = ["sync", "time"] }
